IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
10/1/13: Prevent the "Use Raptor Result..." button in eTomo - Fiducial Model
dialog from being triggered multiple times.(Bug# 1727)

10/1/13: Saving the state of the eTomo - Fiducial Model dialog.(Bug# 1722)

10/1/13: Improved the handling of opening eTomo - Post Processing at the wrong
time.(Bug# 1712)

9/27/13: Added predefined tomodataplots graphs to various places in eTomo.
(Bug# 1707)

9/24/13: IMOD_4-6-30
9/24/13: Prevented tomodataplots from putting out an empty file and Onegenplot
from going into an infinite loop on an empty or inadequate file.

9/20/13: Added option to Reducecont to replace each contour with a set of
points evenly spaced along the contour.

9/19/13: Added ability for Xfsimplex to load data with antialiased image
reduction and made Xfalign call it in this mode, so that filtering now
happens after reduction instead of before.  This avoids problems with very
large images and makes the effect of filtering somewhat more predictable, but
has changed the effect of the filters for autoalignment in the Join and Serial
Section interfaces.

9/19/13: Fixed a problem in eTomo - Serial Sections where etomo could not find
the piece list file during startup.  This caused it to run extrapieces despite
the existance of a piece list file in the dataset.(Bug# 1747)

9/19/13: Fixed a problem in eTomo - Serial Sections where the main frame
locked up when the log window was displayed.(Bug# 1746)

9/19/13: Fixed a problem with the xfalign panel in Serial Sections and Join in
eTomo where blanking the filter data caused the process to run with the
initial values.(Bug# 1745)

9/17/13: Fixed right-click menu in eTomo - Fiducial Model Dialog.(Bug# 1683)

9/17/13: Resolved problems with the project log window.(Bug# 1690, Bug# 1616)

9/4/13: Added SloppyMontage parameter to blend.com in eTomo - Serial Sections.
(Bug# 1742)
